Nodejs/Docker/K3S/Yaml/WebSrvCliYaml/WebSrv/srv-deploy-injected.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: srv-deployment
  name: srv-deployment
  namespace: web-srv-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: srv-deployment
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: srv-deployment
    spec:
      containers:
      - image: lzg-express-srv:v1.0.0
        name: lzg-express-srv
      nodeSelector:
        k3s.io/hostname: worker-node
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: srv-service
    role: k8s-service
  name: srv-service
  namespace: web-srv-ns
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: srv-deployment
---
