Nodejs/Docker/K3S/Yaml/WebSrvCliYaml/WebSrv/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: web-srv-ns
  labels:
    app: web-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-deployment
  template:
    metadata:
      labels:
        app: web-deployment
    spec:
      containers:
      - name: lzg-express-web
        image: lzg-express-web:v1.0.0
      nodeSelector:
        k3s.io/hostname: worker-node

---

apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: web-srv-ns
  labels:
    app: web-service
    role: k8s-service
spec:
  selector:
    app: web-deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
